@@ -1,11 +1,10 @@
 package ch.ivy.addon.portal.generic.navigation;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 import org.primefaces.PrimeFaces;
 
-import ch.ivy.addon.portalkit.enums.SessionAttribute;
 import ch.ivyteam.ivy.environment.Ivy;
 
 /**
@@ -16,20 +15,13 @@ public final class PortalNavigatorInFrame {
   /**
    * Navigates to PortalEndPage without finishing a task, e.g. clicking on Cancel button then back to previous page: task list or task details or global search
    */
-  public void navigateToPortalEndPage() {
-    Ivy.session().setAttribute(SessionAttribute.IS_TASK_FINISHED.toString(), false);
+  public static void navigateToPortalEndPage() {
     String statement = "parent.redirectToEndPageCommand([{name: 'taskId', value: " + Ivy.wfTask().getId() + "}]);";
     PrimeFaces.current().executeScript(statement);
   }
-  
-  public void navigateToPortalHome() {
-    String statement = "parent.redirectToHomePageCommand()";
-    PrimeFaces.current().executeScript(statement);
-  }
-  
 
-  public void navigateToUrl(String url) throws UnsupportedEncodingException {
-    String statement = "parent.redirectToUrlCommand([{name: 'url', value: '" + URLDecoder.decode(url, "UTF-8") + "'}])";
+  public static void navigateToUrl(String url) {
+    String statement = "parent.redirectToUrlCommand([{name: 'url', value: '" + URLDecoder.decode(url, StandardCharsets.UTF_8) + "'}])";
     PrimeFaces.current().executeScript(statement);
   }
 }
